# slack_agent

./: .env.example  .gitignore  LICENSE  README.md  main.py  manifest.yaml  pyproject.toml
slack_agent/: __init__.py  main_function.py
slack_agent/events/: __init__.py  app_mention.py
slack_agent/functions/: __init__.py  example.py
slack_agent/functions/utils/: __init__.py  registry.py
